# FrostwingCore

./: CMakeLists.txt  README.md
Fixed Talents_Spells/: Death Knight.txt  Hunter.txt  Items.txt  Rouge.txt  Shaman.txt  Warlock.txt
FrostwingCoreDB/Database Updates/: Information.txt
FrostwingCoreDB/frostwing_char/: Information.txt  frostwing_char.sql
FrostwingCoreDB/frostwing_logon/: Information.txt  frostwing_logon.sql
FrostwingCoreDB/frostwing_world/: Information.txt
cmake/battlegrounds/: CMakeLists.txt
cmake/scripts/: CMakeLists.txt
cmake/scripts/luaengine/: CMakeLists.txt
cmake/scripts/realmscripts/: CMakeLists.txt
cmake/scripts/serverstatusplugin/: CMakeLists.txt
cmake/shared/: CMakeLists.txt
cmake/spellhandlers/: CMakeLists.txt
cmake/tools/: CMakeLists.txt
cmake/tools/creature_data/: CMakeLists.txt
cmake/tools/map_extractor/: CMakeLists.txt
cmake/tools/mmaps_generator/: CMakeLists.txt
cmake/tools/vmap_tools/: CMakeLists.txt
cmake/world/: CMakeLists.txt
configs/: logon.conf  optional.conf  realms.conf  world.conf
git_version_error_fix/: README.txt  git_version.h
src/crashreport/: Main.c
src/logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  AutoPatcher.cpp  AutoPatcher.h  LogonCommServer.cpp  LogonCommServer.h  LogonConsole.cpp  LogonConsole.h  LogonOpcodes.cpp  LogonOpcodes.h  LogonStdAfx.cpp  LogonStdAfx.h  Main.cpp  Main.h  PeriodicFunctionCall_Thread.h
src/scripts/Battlegrounds/: AlteracValley.cpp  AlteracValley.h  ArathiBasin.cpp  ArathiBasin.h  CircleOfBlood.cpp  CircleOfBlood.h  DalaranSewers.cpp  DalaranSewers.h  EyeOfTheStorm.cpp  EyeOfTheStorm.h  IsleOfConquest.cpp  IsleOfConquest.h  RingOfTrials.cpp  RingOfTrials.h  RingOfValor.cpp  RingOfValor.h  RuinsOfLordaeron.cpp  RuinsOfLordaeron.h  Setup.cpp  Setup.h  StrandOfTheAncient.cpp  StrandOfTheAncient.h  WarsongGulch.cpp  WarsongGulch.h
src/scripts/Common/: Base.cpp  Base.h  Instance_Base.h
src/scripts/LuaEngine/: SpellFunctions.h  UnitFunctions.h
src/scripts/SpellHandlers/: DeathKnightSpells.cpp  MageSpells.cpp  MiscSpells.cpp  PaladinSpells.cpp  PetAISpells.cpp  (+2 more)
src/shared/: AuthCodes.h  ByteBuffer.h  CRefcounter.h  CThreads.cpp  CThreads.h  CallBack.h  Common.h  CrashHandler.cpp  CrashHandler.h  DynLib.cpp  DynLib.hpp  Errors.h  FastQueue.h  FindFiles.cpp  FindFiles.hpp  FindFilesResult.hpp  LocationVector.h  Log.cpp  Log.h  MersenneTwister.cpp  MersenneTwister.h  PerformanceCounter.cpp  PerformanceCounter.hpp  PreallocatedQueue.h  Singleton.h  StackBuffer.h  Storage.h  SysInfo.cpp  SysInfo.hpp  TLSObject.h  Tokenizer.h  Util.cpp  Util.h  WoWGuid.h  WorldPacket.h  ascemuConfig.h  ascemu_getopt.cpp  ascemu_getopt.h
src/world/: AIEvents.cpp  AIEvents.h  AIInterface.cpp  AIInterface.h  AchievementMgr.cpp  AchievementMgr.h  AddonMgr.cpp  AddonMgr.h  AreaTrigger.cpp  AreaTrigger.h  ArenaTeam.cpp  ArenaTeam.h  Arenas.cpp  Arenas.h  AuctionHouse.cpp  AuctionHouse.h  AuctionMgr.cpp  AuctionMgr.h  BaseConsole.h  BattlefieldMgr.h  Battleground.cpp  Battleground.h  BattlegroundCommands.cpp  BattlegroundHandler.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  CConsole.cpp  CConsole.h  CRitual.cpp  CRitual.h  CalendarHandler.cpp  CalendarMgr.cpp  CalendarMgr.h  CellHandler.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  CharacterHandler.cpp  Chat.cpp  (+239 more)
(+196 files in other folders)
